--- a/templates/edit-items.html
+++ b/templates/edit-items.html
@@ -17,17 +17,17 @@
                                         <label>Item Name</label>
                                         <input type="text" class="form-control" value="{{item.description}}" name="name">
                                     </div>
-                                    <div class="form-group">
+                                    <!-- <div class="form-group">
                                         <div class="form-group">
                                             <label>Aditional_details   </label>
                                             <input class="form-control" value="{{item.aditional_details}}" name="aditional_details">
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label>Price Per unit</label>
-                                        <input type="number" class="form-control" value="{{item.rate}}" name="price" >
+                                        <label>Aditional_details   </label>
+                                        <input class="form-control" value="{{item.aditional_details}}" name="aditional_details">
                                     </div>
                                     <!-- <div class="form-group">
                                         <input type="text" value="{{item.is_taxable}}" >
